export enum BetStatus {
  Pending = 'Pending',
  Won = 'Won',
  Lost = 'Lost',
}
