export enum PrizeLevel {
  Special = 'Special',
  First = 'First',
  Second = 'Second',
  Third = 'Third',
  Fourth = 'Fourth',
  Fifth = 'Fifth',
  Sixth = 'Sixth',
  Seventh = 'Seventh',
}
