classDiagram
    class User {
        <<AggregateRoot>>
        -id: uuid
        -username: string
        -hashPassword: string
        -email: string
        -displayName: string
        -createAt: Date
    }

    class Gender {
        -Male
        -Female
    }

    <<Enumeration>> Gender

    namespace AuthModule {
        class RefreshToken {
            <<Entity>>
            -tokenId: uuid
            -token: string
            -createAt: Date
            -expiresAt: Date
            -isRevoked: boolean
            -revokedDate: Date
            +revoke()
            +isValid(): boolean
            +isExpired(): boolean
        }

    }

    User "1" *-- "*" RefreshToken : owns
    namespace CoreData {
        class LotteryResult {
            -id: uuid
            -date: Date
            -source: string
            -region: string
        }

        class LotteryNumber {
            -prizeLevel: prizeLevel
            -value: string
            -position: int
        }

        class PrizeLevel {
            -Special
            -First
            -Second
            -Third
            -Fourth
            -Fifth
            -Sixth
            -Seventh
        }
    }

    <<AggregateRoot>> LotteryResult
    <<ValueObject>> LotteryNumber
    <<Enumeration>> PrizeLevel

    LotteryResult "1" *-- "*" LotteryNumber : contains
    LotteryNumber ..> PrizeLevel : uses

    namespace NewsModule {
        class NewsArticle {
            -id: uuid
            -title: string
            -summary: string
            -content: string
            -source: string
            -publishDate: Date
        }
        class DeathRecord {
            -id: uuid
            -name: string
            -age: int
            -gender: Gender
            -birthDate: Date
            -deathDate: Date
            -causeOfDeath: string
            -source: string
        }
    }

    DeathRecord ..> Gender : has

    namespace StrategyModule {
        class Strategy {
            -id: uuid
            -name: string
            -description: string
            -createdAt: Date
        }
        class StrategyCondition {
            -type: string
            -parameters: json
        }
        class BacktestRun {
            -id: uuid
            -startDate: Date
            -endDate: Date
            -winRate: float
            -profit: float
        }
        class BacktestResult {
            -totalBets: int
            -wonBets: int
            -lostBets: int
            -totalProfit: float
        }
    }

    <<AggregateRoot>> Strategy
    <<ValueObject>> StrategyCondition
    <<Entity>> BacktestRun
    <<ValueObject>> BacktestResult

    Strategy "1" *-- "*" StrategyCondition : defines
    Strategy "1" o-- "*" BacktestRun : executes
    BacktestRun "1" *-- "1" BacktestResult : yields
    User "1" --> "*" Strategy : owns


    namespace JournalModule {
        class BetEntry {
            -id: uuid
            -number: string
            -amount: float
            -betDate: Date
        }
        class BetResult {
            -id: uuid
            -actualNumber: string
            -isWin: boolean
            -payout: float
        }
        class BetStatus {
            -Pending
            -Won
            -Lost
        }
    }

    <<AggregateRoot>> BetEntry
    <<Entity>> BetResult
    <<Enumeration>> BetStatus

    BetResult "1" --* "*" BetEntry : belongs to
    BetEntry "*" --> "1" User : created by

    namespace AIModule {
        class AIInsight {
            -id: uuid
            -content: string
            -confidenceScore: float
            -createdAt: Date
        }
        class ChatConversation {
            <<AggregateRoot>>
            -id: uuid
            -userId: uuid
            -chatType: string
            -title: string
        }
        class ChatMessage {
            <<ValueObject>>
            -role: string
            -content: string
            -timestamp: Date
        }
    }

    ChatConversation "1" *-- "*" ChatMessage : contains
    ChatConversation "*" --> "1" User : created by

